test/language/spec/pipeline/invalid/pipeline_cycle.topo
// TEST: pipeline with cycle
// EXPECT-ERROR: cycle

namespace app {
  public:
    void run();
    fn run {
      a -> b;
      b -> a;
      a -> void;
    }

  protected:
    void a();
    void b();
}
